feat: added basic webpage structure
Added basic structure for sign in, sign up, and SPA pages

--- a/pages/auth/sign-in/index.html
+++ b/pages/auth/sign-in/index.html
@@ -3,9 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Document</title>
+    <title>Pomofire | Sign-In</title>
 </head>
 <body>
+    <div class="container">
+        <header class="header">
+            <div id="logo">
+                Pomofire
+            </div>
+        </header>
 
+        <main>
+                <h1 class="heading">Sign In</h1>
+
+                <form id="form--sign-up" class="form" action="">
+                    <section class="form-field">
+                        <label class="form-field__label" for="username"></label>
+                        <input class="form-field__field" id="username" type="text">
+
+                        <div class="form-field__message">
+
+                        </div>
+                    </section>
+
+                    <section class="form-field">
+                        <label class="form-field__label" for="password"></label>
+                        <input class="form-field__field" id="password" type="password">
+
+                        <div class="form-field__message">
+
+                        </div>
+                    </section>
+
+                    <button class="button button--primary" type="submit">
+                        Sign In
+                    </button>
+                </form>
+        </main>
+
+        <footer class="footer">
+            <hr class="divider">
+
+            <p>
+                &copy; 2025 Pomofire. All rights reserved.
+            </p>
+            <p>
+                Designed with love by <a href="https://www.linkedin.com/in/jhndrncrz">John Adrian Cruz</a>.
+            </p>
+        </footer>
+    </div>
 </body>
 </html>
