--- a/pages/auth/sign-in/index.html
+++ b/pages/auth/sign-in/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pomofire | Sign-In</title>
+
+    <link rel="stylesheet" href="../../../styles/global.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="container">
@@ -14,12 +17,13 @@
         </header>
 
         <main>
+            <div class="card">
                 <h1 class="heading">Sign In</h1>
 
-                <form id="form--sign-up" class="form" action="">
+                <form id="form--sign-in" class="form" action="">
                     <section class="form-field">
-                        <label class="form-field__label" for="username"></label>
-                        <input class="form-field__field" id="username" type="text">
+                        <label class="form-field__label" for="email"></label>
+                        <input class="form-field__field" id="email" type="text" placeholder="Email">
 
                         <div class="form-field__message">
 
@@ -28,17 +32,18 @@
 
                     <section class="form-field">
                         <label class="form-field__label" for="password"></label>
-                        <input class="form-field__field" id="password" type="password">
+                        <input class="form-field__field" id="password" type="password" placeholder="Password">
 
                         <div class="form-field__message">
 
                         </div>
                     </section>
 
-                    <button class="button button--primary" type="submit">
+                    <button id="submit" class="button button--primary" type="submit">
                         Sign In
                     </button>
                 </form>
+            </div>
         </main>
 
         <footer class="footer">
@@ -52,5 +57,6 @@
             </p>
         </footer>
     </div>
+    <script src="./script.js" type="module"></script>
 </body>
 </html>
