--- a/pages/auth/sign-up/index.html
+++ b/pages/auth/sign-up/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pomofire | Sign-Up</title>
+
+    <script src="" type="module"></script>
+    <link rel="stylesheet" href="../../../styles/global.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="container">
@@ -14,12 +18,13 @@
         </header>
 
         <main>
+            <div class="card">
                 <h1 class="heading">Sign Up</h1>
 
-                <form id="form--sign-up" class="form" action="">
+                <form id="form--sign-up" class="form">
                     <section class="form-field">
-                        <label class="form-field__label" for="email">Email</label>
-                        <input class="form-field__field" id="email" type="text">
+                        <label class="form-field__label" for="email"></label>
+                        <input class="form-field__field" id="email" type="text" placeholder="Email">
 
                         <div class="form-field__message">
 
@@ -27,17 +32,8 @@
                     </section>
 
                     <section class="form-field">
-                        <label class="form-field__label" for="username">Username</label>
-                        <input class="form-field__field" id="username" type="text">
-
-                        <div class="form-field__message">
-
-                        </div>
-                    </section>
-
-                    <section class="form-field">
-                        <label class="form-field__label" for="password">Password</label>
-                        <input class="form-field__field" id="password" type="password">
+                        <label class="form-field__label" for="password"></label>
+                        <input class="form-field__field" id="password" type="password" placeholder="Password">
 
                         <div class="form-field__message">
 
@@ -45,18 +41,19 @@
                     </section>
 
                     <section class="form__field">
-                        <label class="form-field__label" for="confirm-password">Confirm Password</label>
-                        <input class="form-field__field" id="confirm-password" type="password">
+                        <label class="form-field__label" for="confirm-password"></label>
+                        <input class="form-field__field" id="confirm-password" type="password" placeholder="Confirm Password">
 
                         <div class="form-field__message">
 
                         </div>
                     </section>
 
-                    <button class="button button--primary" type="submit">
+                    <button id="submit" class="button button--primary" type="submit">
                         Sign Up
                     </button>
                 </form>
+            </div>
         </main>
 
         <footer class="footer">
@@ -70,5 +67,6 @@
             </p>
         </footer>
     </div>
+    <script src="./script.js" type="module"></script>
 </body>
 </html>
